--- a/StreamingTinderWepApi/StreamingTinderWepApi.csproj
+++ b/StreamingTinderWepApi/StreamingTinderWepApi.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreaminTinderClassLibrary\StreaminTinderClassLibrary.csproj" />
+  </ItemGroup>
+
 
 </Project>
