--- a/H4_XamarinStreamingTinder/StreamingTinder/StreamingTinder/StreamingTinder.csproj
+++ b/H4_XamarinStreamingTinder/StreamingTinder/StreamingTinder/StreamingTinder.csproj
@@ -9,4 +9,14 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\StreamingTinderClassLibrary\StreamingTinderClassLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\CreateAccountPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
